--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 PORT=8080
+
+# This was inserted by `prisma init`:
+[object Promise]
+
+DATABASE_URL=postgresql://neondb_owner:npg_yTfnu0EWwDz2@ep-fragrant-dawn-a41h88xx-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
