--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prisma": "^6.10.1"
   }
 }
