--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
